# sapphillon-front

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Makefile  README.md  TODO.md  buf.gen.yaml  deno.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.cursor/: introduction-floorpos.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  testing.yml
docs/: error-handling.md  refactoring-summary.md  ui-todos.md
mock-server/: index.ts
mock-server/data/: mock-data.ts
mock-server/handlers/: version-handler.ts  workflow-handler.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src/app/: chat.tsx  debug.tsx  edit.tsx  generate.tsx  index.tsx  llm-interface.tsx  plugin-manager.tsx  plugins.tsx  run.tsx  settings.tsx  system-monitor.tsx  workflow-detail.tsx  workflow-execution.tsx  workflow-generation.tsx  workflow.tsx  workflows-root.tsx  workflows.tsx
src/components/: app-background.tsx  app-sidebar.tsx  header.tsx  index.ts  status-bar.tsx  theme-provider.tsx  workflow-executor.tsx  workflow-history.tsx  workflow-interface.tsx  workflow-node.tsx
src/data/: sample-workflows.ts
src/hooks/: index.ts  useI18n.ts  useKeyboardShortcut.ts  useOnboarding.ts  usePromptHistory.ts  useVersionPing.test.ts  useVersionPing.ts  useWorkflowClone.ts
src/i18n/: config.ts  index.ts
src/lib/: browser-bridge.ts  browser-os.ts  browseros.ts  constants.ts  floorp-plugins.ts  gemini.ts  grpc-clients.test.ts  (+11 more)
web_server/: Cargo.toml  Cross.toml  build.rs
web_server/src/: main.rs
(+136 files in other folders)
