[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", default-features = false }
actix-web-static-files = { version = "4.1.1", default-features = false }
static-files = { version = "0.3.1", default-features = false }


[build-dependencies]
static-files = { version = "0.3.1", default-features = false }
