[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0" }
actix-web-static-files = { version = "4.1.1", features = ["static-files-03"]}
static-files = { version = "0.3.1" }
log = "0.4"
env_logger = "0.11"


[build-dependencies]
static-files = { version = "0.3.1" }
