[package]
name = "sapphillon-front-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
actix-web-static-files = { version = "4.1.1", features = ["static-files-03", "change-detection"], default-features = false }
static-files = { version = "0.3.1", default-features = false }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }


[build-dependencies]
static-files = { version = "0.3.1" }
